column lines were not showing, fixed by changing vertical line css to border-right

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ hr {
 }
 
 .vertical-line {
-    border-radius: 3px solid black ;
+    border-right: 3px solid black ;
 }
 
 .winner {
